--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy to Digital Ocean
 on:
   push:
-    branches: [ master ]  # Make sure this matches your main branch name (could be 'master')
+    branches: [ master ]
 
 jobs:
   deploy:
@@ -19,7 +19,16 @@ jobs:
       
     - name: Build
       run: npm run build
-      
+
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.DO_SSH_KEY }}
+        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+        
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.DO_HOST }} >> ~/.ssh/known_hosts
+        
     - name: Deploy to Digital Ocean
       uses: appleboy/scp-action@master
       with:
@@ -29,14 +38,3 @@ jobs:
         source: "dist/*"
         target: "/var/www/resume-site"
         strip_components: 1
-
-    - name: Set permissions and restart Nginx
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.DO_HOST }}
-        username: ${{ secrets.DO_USERNAME }}
-        key: ${{ secrets.DO_SSH_KEY }}
-        script: |
-          sudo chown -R www-data:www-data /var/www/resume-site
-          sudo chmod -R 755 /var/www/resume-site
-          sudo systemctl restart nginx
