--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,12 +7,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     
     - name: Setup Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         
     - name: Install Dependencies
       run: npm install
@@ -30,7 +30,7 @@ jobs:
       run: ssh-keyscan -H ${{ secrets.DO_HOST }} >> ~/.ssh/known_hosts
         
     - name: Deploy to Digital Ocean
-      uses: appleboy/scp-action@master
+      uses: appleboy/scp-action@v1.0.0  # Updated to use specific version
       with:
         host: ${{ secrets.DO_HOST }}
         username: ${{ secrets.DO_USERNAME }}
@@ -38,3 +38,14 @@ jobs:
         source: "dist/*"
         target: "/var/www/resume-site"
         strip_components: 1
+
+    - name: Set permissions
+      uses: appleboy/ssh-action@v1.0.0  # Updated to use specific version
+      with:
+        host: ${{ secrets.DO_HOST }}
+        username: ${{ secrets.DO_USERNAME }}
+        key: ${{ secrets.DO_SSH_KEY }}
+        script: |
+          sudo chown -R www-data:www-data /var/www/resume-site
+          sudo chmod -R 755 /var/www/resume-site
+          sudo systemctl restart nginx
