--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy to Digital Ocean
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   deploy:
@@ -30,7 +30,7 @@ jobs:
       run: ssh-keyscan -H ${{ secrets.DO_HOST }} >> ~/.ssh/known_hosts
         
     - name: Deploy to Digital Ocean
-      uses: appleboy/scp-action@v1.0.0  # Updated to use specific version
+      uses: appleboy/scp-action@master  # Changed from v1.0.0 to master
       with:
         host: ${{ secrets.DO_HOST }}
         username: ${{ secrets.DO_USERNAME }}
@@ -40,7 +40,7 @@ jobs:
         strip_components: 1
 
     - name: Set permissions
-      uses: appleboy/ssh-action@v1.0.0  # Updated to use specific version
+      uses: appleboy/ssh-action@master  # Changed from v1.0.0 to master
       with:
         host: ${{ secrets.DO_HOST }}
         username: ${{ secrets.DO_USERNAME }}
