--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy to Digital Ocean
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   deploy:
@@ -20,7 +20,7 @@ jobs:
     - name: Build
       run: npm run build
 
-    - name: Install SSH Key
+    - name: Install SSH key
       uses: shimataro/ssh-key-action@v2
       with:
         key: ${{ secrets.DO_SSH_KEY }}
@@ -28,24 +28,16 @@ jobs:
         
     - name: Adding Known Hosts
       run: ssh-keyscan -H ${{ secrets.DO_HOST }} >> ~/.ssh/known_hosts
-        
-    - name: Deploy to Digital Ocean
-      uses: appleboy/scp-action@master  # Changed from v1.0.0 to master
-      with:
-        host: ${{ secrets.DO_HOST }}
-        username: ${{ secrets.DO_USERNAME }}
-        key: ${{ secrets.DO_SSH_KEY }}
-        source: "dist/*"
-        target: "/var/www/resume-site"
-        strip_components: 1
 
-    - name: Set permissions
-      uses: appleboy/ssh-action@master  # Changed from v1.0.0 to master
-      with:
-        host: ${{ secrets.DO_HOST }}
-        username: ${{ secrets.DO_USERNAME }}
-        key: ${{ secrets.DO_SSH_KEY }}
-        script: |
-          sudo chown -R www-data:www-data /var/www/resume-site
-          sudo chmod -R 755 /var/www/resume-site
+    - name: Deploy with rsync
+      run: |
+        sudo apt-get install -y rsync
+        rsync -avz --delete ./dist/ ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }}:/var/www/resume-site/
+        
+    - name: Set permissions and restart Nginx
+      run: |
+        ssh ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }} '
+          sudo chown -R www-data:www-data /var/www/resume-site &&
+          sudo chmod -R 755 /var/www/resume-site &&
           sudo systemctl restart nginx
+        '
