--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Digital Ocean
 on:
   push:
     branches: [ main ]
-
+  workflow_dispatch:
 jobs:
   deploy:
     runs-on: ubuntu-latest
