--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: Deploy to Digital Ocean
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   workflow_dispatch:
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -29,15 +30,18 @@ jobs:
     - name: Adding Known Hosts
       run: ssh-keyscan -H ${{ secrets.DO_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Deploy with rsync
+    - name: Create dist directory on server
+      run: ssh ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }} 'mkdir -p /var/www/resume-site'
+
+    - name: Transfer and deploy
       run: |
-        sudo apt-get install -y rsync
-        rsync -avz --delete ./dist/ ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }}:/var/www/resume-site/
-        
-    - name: Set permissions and restart Nginx
-      run: |
+        tar -czf dist.tar.gz -C dist .
+        scp dist.tar.gz ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }}:/var/www/resume-site/
         ssh ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }} '
-          sudo chown -R www-data:www-data /var/www/resume-site &&
-          sudo chmod -R 755 /var/www/resume-site &&
+          cd /var/www/resume-site &&
+          tar xzf dist.tar.gz &&
+          rm dist.tar.gz &&
+          sudo chown -R www-data:www-data . &&
+          sudo chmod -R 755 . &&
           sudo systemctl restart nginx
         '
